🔄 Switch from ConvertKit to Airtable integration
- Update API endpoint to use Airtable (free forever vs 14-day trial)
- Replace ConvertKit API calls with Airtable record creation
- Update environment variables for Airtable credentials
- Comprehensive SETUP.md with Airtable configuration guide
- Add visual dashboard benefits and data portability
- Support for 1,000 free signups with no time limits

Environment variables needed:
- AIRTABLE_API_KEY
- AIRTABLE_BASE_ID
- AIRTABLE_TABLE_NAME

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 # PulseCheck Environment Variables
 # Copy this file to .env.local for local development
 
-# ConvertKit API Configuration
-# Get these from: https://app.convertkit.com/account_settings/advanced_settings
-CONVERTKIT_API_KEY=your_convertkit_api_key_here
-CONVERTKIT_FORM_ID=your_convertkit_form_id_here
+# Airtable API Configuration
+# Get these from: https://airtable.com/create/tokens
+AIRTABLE_API_KEY=your_airtable_api_key_here
+AIRTABLE_BASE_ID=your_airtable_base_id_here
+AIRTABLE_TABLE_NAME=Signups
 
 # Optional: Analytics and monitoring
 # VERCEL_ANALYTICS_ID=your_vercel_analytics_id
